2001-04-14  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* data/*.shp, data/flx.in, Makefile.*: added lots of shapes for new savegame gump

2001-04-14  Jeff Freedman  <jeff@amy.nerble.net>

	* Wrote 'write_map()' methods (although not complete).
	* Fixed several SI bugs.

2001-04-14  Willem Jan Palenstijn <palenstijn@wandoo.nl>
	* gumps/gump_utils.h: include unistd.h by default, not just on *BSD

2001-04-12  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* configure.in: a few minor changes for solaris

2001-04-11  Jeff Freedman  <jeff@amy.nerble.net>

	* Alpha3 tagged!

2001-04-10  Jeff Freedman  <jeff@amy.nerble.net>

	* Fixed boundary problem in Chunk_iterator.  Amulet to Silver Seed
	works now (but a bit too slowly).

2001-04-10  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* Makefile.be, beos/exult.rsrc: bumped up version to 0.92alpha3
	* NEWS: inserted date, added new paperdoll art

2001-04-08  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* objs/egg.cc, objs/objs.cc, objs/iregobjs.cc: replaced the 'delete' in remove_this by a Game_window::delete_object

2001-04-07  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* usecode/: SI intrinsic 0xB2 returns 'a' or 'an' depending on argument
	
2001-04-06  Jeff Freedman  <jeff@amy.nerble.net>

	* Put deleted monsters in a table for later actual deletion.
	Appears to fix the teleport bug.

2001-04-04  Jeff Freedman  <jeff@amy.nerble.net>

	* Lots of changes to Patrol schedule.  It always uses pathfinding
	now, and uses quality for Usecode test in SI.
	* Fixed ship rotation in SI.
	* Set 'killable' for all monsters when they're created.

2001-04-04  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* data/quotes.txt: new quote
	* gumps/Paperdoll_gump_info.cc: use correct fellowship amulet shape

2001-04-03  Jeff Freedman  <jeff@amy.nerble.net>

	* Ship is starting to work, but not reliably, and with much bugginess.

2001-04-02  Jeff Freedman  <jeff@amy.nerble.net>
